// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageNavigationExample renders the storybook example 1`] = `
.emotion-16 {
  width: 100%;
  background: #ffffff;
  color: #005ea5;
  border-bottom: solid 1px #e2e2e2;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 30px;
  padding-right: 30px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
  color: #005ea5;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  border-bottom: 4px solid transparent;
  padding-top: 15px;
  padding-left: 15px;
  padding-bottom: 11px;
  padding-right: 15px;
}

.emotion-0:hover {
  color: #2b8cc4;
  border-color: #2b8cc4;
}

.emotion-0:focus {
  outline: 3px solid #ffbf47;
}

<PageNavigationExample>
  <PageNavigation>
    <StyledNavigation>
      <div
        className="emotion-16 emotion-17"
      >
        <InnerContainer>
          <div
            className="emotion-14 emotion-15"
          >
            <NavigationItems>
              <div
                className="emotion-12 emotion-13"
              >
                <Anchor
                  href="/"
                >
                  <Component
                    className="emotion-0 emotion-1"
                    href="/"
                  >
                    <a
                      className="emotion-0 emotion-1"
                      href="/"
                    >
                      Home
                    </a>
                  </Component>
                </Anchor>
                <Anchor
                  href="/section-01"
                >
                  <Component
                    className="emotion-0 emotion-1"
                    href="/section-01"
                  >
                    <a
                      className="emotion-0 emotion-1"
                      href="/section-01"
                    >
                      Section 01
                    </a>
                  </Component>
                </Anchor>
                <Anchor
                  href="/section-02"
                >
                  <Component
                    className="emotion-0 emotion-1"
                    href="/section-02"
                  >
                    <a
                      className="emotion-0 emotion-1"
                      href="/section-02"
                    >
                      Section 02
                    </a>
                  </Component>
                </Anchor>
              </div>
            </NavigationItems>
          </div>
        </InnerContainer>
      </div>
    </StyledNavigation>
  </PageNavigation>
</PageNavigationExample>
`;

exports[`PageNavigationExample renders the with React Router 1`] = `
.emotion-22 {
  width: 100%;
  background: #ffffff;
  color: #005ea5;
  border-bottom: solid 1px #e2e2e2;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 30px;
  padding-right: 30px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
  color: #005ea5;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  border-bottom: 4px solid transparent;
  padding-top: 15px;
  padding-left: 15px;
  padding-bottom: 11px;
  padding-right: 15px;
}

.emotion-6:hover {
  color: #2b8cc4;
  border-color: #2b8cc4;
}

.emotion-6:focus {
  outline: 3px solid #ffbf47;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
  color: #005ea5;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  border-bottom: 4px solid transparent;
  padding-top: 15px;
  padding-left: 15px;
  padding-bottom: 11px;
  padding-right: 15px;
  border-color: #005ea5;
}

.emotion-0:hover {
  color: #2b8cc4;
  border-color: #2b8cc4;
}

.emotion-0:focus {
  outline: 3px solid #ffbf47;
}

<ReactRouterExample>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <PageNavigation>
        <StyledNavigation>
          <div
            className="emotion-22 emotion-23"
          >
            <InnerContainer>
              <div
                className="emotion-20 emotion-21"
              >
                <NavigationItems>
                  <div
                    className="emotion-18 emotion-19"
                  >
                    <Component
                      exact={true}
                      to="/"
                    >
                      <NavLinkWithProp
                        activeProp="active"
                        exact={true}
                        to="/"
                      >
                        <Route
                          exact={true}
                          path="\\\\/"
                        >
                          <Anchor
                            active={true}
                            as={[Function]}
                            to="/"
                          >
                            <Component
                              active={true}
                              as={[Function]}
                              className="emotion-0 emotion-1"
                              to="/"
                            >
                              <Link
                                className="emotion-0 emotion-1"
                                replace={false}
                                to="/"
                              >
                                <a
                                  className="emotion-0 emotion-1"
                                  href="/"
                                  onClick={[Function]}
                                >
                                  Home
                                </a>
                              </Link>
                            </Component>
                          </Anchor>
                        </Route>
                      </NavLinkWithProp>
                    </Component>
                    <Component
                      to="/section-01"
                    >
                      <NavLinkWithProp
                        activeProp="active"
                        to="/section-01"
                      >
                        <Route
                          path="\\\\/section-01"
                        >
                          <Anchor
                            active={false}
                            as={[Function]}
                            to="/section-01"
                          >
                            <Component
                              active={false}
                              as={[Function]}
                              className="emotion-6 emotion-1"
                              to="/section-01"
                            >
                              <Link
                                className="emotion-6 emotion-1"
                                replace={false}
                                to="/section-01"
                              >
                                <a
                                  className="emotion-6 emotion-1"
                                  href="/section-01"
                                  onClick={[Function]}
                                >
                                  Section 01
                                </a>
                              </Link>
                            </Component>
                          </Anchor>
                        </Route>
                      </NavLinkWithProp>
                    </Component>
                    <Component
                      to="/section-02"
                    >
                      <NavLinkWithProp
                        activeProp="active"
                        to="/section-02"
                      >
                        <Route
                          path="\\\\/section-02"
                        >
                          <Anchor
                            active={false}
                            as={[Function]}
                            to="/section-02"
                          >
                            <Component
                              active={false}
                              as={[Function]}
                              className="emotion-6 emotion-1"
                              to="/section-02"
                            >
                              <Link
                                className="emotion-6 emotion-1"
                                replace={false}
                                to="/section-02"
                              >
                                <a
                                  className="emotion-6 emotion-1"
                                  href="/section-02"
                                  onClick={[Function]}
                                >
                                  Section 02
                                </a>
                              </Link>
                            </Component>
                          </Anchor>
                        </Route>
                      </NavLinkWithProp>
                    </Component>
                  </div>
                </NavigationItems>
              </div>
            </InnerContainer>
          </div>
        </StyledNavigation>
      </PageNavigation>
    </Router>
  </BrowserRouter>
</ReactRouterExample>
`;
